wp/wp-content/themes/roots/custom-css/dessy-interview.css
/*=============================
Desssy Interview Specific Styles
=============================*/

/* Article > Header */

.interview .interview-number {
    padding: 0.4em 0.6em 0.4em 0.65em;
}

.interview address .author-image{
    background: url('http://womenandtech.com/assets/img/lucia-interview/lucia-square.jpg') center center no-repeat;
    background-size: 110%;
}

/* Article > #Opening */
.fullscreen img {
    min-height: 420px;
    min-width: 748px;
}


/* CAPTION POSITIONS */
/* uncomment and modify as needed */
/*

.fullscreen .info-panel#pecha-kucha {
    top:auto;
    bottom:50%;
}

.fullscreen .info-panel#illustrations {
    top:25%
}

.fullscreen .info-panel#screenshots {
    top:5%
}

.fullscreen .info-panel aside{
}
*/


/* Article > Start Tag */
.no-svg #start-animation {
    background:transparent url("../img/lucia-interview/img-swiffy-start-animation.gif") no-repeat left top;
}

.notable-person.double .first {
    margin-bottom: 10px;
}


.notable-person h4 {
    font-size: 1.071em;
    line-height: 1.3em;
    margin: 0 0 0.25em;
    font-weight: bold;
}

.notable-person#lindsey-goodchild{
    margin-top: -70px;
}

#ohanian-wozniak .arrow{
    top: 43%;
}

.photo-credit.light {
    background-color:rgba(255,255,255,0.4);
}

.fullscreen .info-panel#on-stage  {
    top:auto;
    bottom:50%;
    right: 0%;
}

.fullscreen .info-panel#teaching{
    top:auto;
    bottom:40%;
    right: 0%;
}

.fullscreen .info-panel#girls, .fullscreen .info-panel#hackeryou{
    top:auto;
    bottom:20%;
}



/* Mobile Fluid */
@media (min-width:767px) and (max-width:979px) {

    /* Forces the h4 text to the right instead of wrapping around the profile image */
    .callout-question #profile-image {
        margin-bottom: 75px;
    }

}


@media (max-width:767px) {

    .curtains.drawn > li .fullscreen{
        margin-top: 10px;
    }

    .fullscreen {
        height: inherit;
    }
    .fullscreen img {
        min-height: inherit;
        min-width: inherit;
        position: static;
        margin-left: inherit;
        top: inherit;
        left: inherit;
    }


    .photo-credit, .photo-credit.light, .photo-credit.dark{
        position:static;
        height: inherit;
        color: #999;
        background-color: transparent;
    }

    .photo-credit a, .photo-credit a:visited, .photo-credit.light a, .photo-credit.light a:visited, .photo-credit.dark a, .photo-credit.dark a:visited{
        color: #888;
    }

    .fullscreen .parallax{
        position: static;
        height: inherit;
    }

    .fullscreen .info-panel{
        width: inherit;
        top: inherit;
        position: static;
    }


    .callout-question #quote-mark{
        top: 2em;
    }

    .photo-callout img{
        float: none;
    }

    .notable-person h4 {
        line-height:1.5em;
    }

    .notable-person#jeeves img, .photo-callout#jeeves img {
        width: 100%;
    }
}

@media (max-width:480px) {
    .notable-person#lindsey-goodchild{
        margin-top: -0.75em;
    }
}

